--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "@radix-ui/react-toggle-group": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.60.5",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/memoizee": "^0.4.12",
     "@types/multer": "^2.0.0",
     "@types/pdfkit": "^0.17.2",
     "axios": "^1.11.0",
+    "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -99,7 +101,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
-    "@types/express-session": "^1.18.0",
+    "@types/express-session": "^1.18.2",
     "@types/node": "20.16.11",
     "@types/node-fetch": "^2.6.13",
     "@types/passport": "^1.0.16",
